--- a/TUGAS6.ipynb
+++ b/TUGAS6.ipynb
@@ -67,6 +67,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode ini adalah implementasi sederhana dari model Decision Tree Regressor menggunakan library scikit-learn (sklearn) dalam bahasa pemrograman Python. Mari kita bahas langkah-langkah utama yang dilakukan oleh kode ini:\n",
+    "\n",
+    "1. **Impor Library:**\n",
+    "   ```python\n",
+    "   from sklearn.model_selection import train_test_split\n",
+    "   from sklearn.tree import DecisionTreeRegressor\n",
+    "   import numpy as np\n",
+    "   ```\n",
+    "   Kode ini mengimpor beberapa library yang diperlukan, termasuk `train_test_split` untuk membagi dataset menjadi data latih dan data uji, `DecisionTreeRegressor` untuk menginisialisasi model Decision Tree Regressor, dan `numpy` untuk manipulasi array dan data numerik.\n",
+    "\n",
+    "2. **Dataset:**\n",
+    "   ```python\n",
+    "   data = [\n",
+    "       (0, 0),\n",
+    "       (1, 0.02),\n",
+    "       # ... (data points)\n",
+    "       (50, 1)\n",
+    "   ]\n",
+    "   ```\n",
+    "   Dataset terdiri dari pasangan nilai input dan output. Pada kasus ini, nilai inputnya adalah angka dari 0 hingga 50, dan nilai outputnya adalah nilai yang sesuai dengan input.\n",
+    "\n",
+    "3. **Pemrosesan Dataset:**\n",
+    "   ```python\n",
+    "   X, y = zip(*data)\n",
+    "   X = np.array(X).reshape(-1, 1)\n",
+    "   y = np.array(y)\n",
+    "   ```\n",
+    "   Data dibagi menjadi fitur (`X`) dan target (`y`). Fitur diubah menjadi format yang diterima oleh model (reshape menjadi matriks 2D).\n",
+    "\n",
+    "4. **Pembagian Data:**\n",
+    "   ```python\n",
+    "   X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "   ```\n",
+    "   Data dibagi menjadi data latih (80%) dan data uji (20%) menggunakan fungsi `train_test_split`.\n",
+    "\n",
+    "5. **Inisialisasi dan Pelatihan Model:**\n",
+    "   ```python\n",
+    "   model = DecisionTreeRegressor()\n",
+    "   model.fit(X_train, y_train)\n",
+    "   ```\n",
+    "   Model Decision Tree Regressor diinisialisasi dan dilatih menggunakan data latih.\n",
+    "\n",
+    "6. **Evaluasi Model:**\n",
+    "   ```python\n",
+    "   score = model.score(X_test, y_test)\n",
+    "   print(f'Model Score: {score}')\n",
+    "   ```\n",
+    "   Model dievaluasi dengan mengukur akurasi pada data uji dan hasilnya dicetak.\n",
+    "\n",
+    "7. **Prediksi Nilai:**\n",
+    "   ```python\n",
+    "   example_values = np.array([2.5, 7.5, 12.5]).reshape(-1, 1)\n",
+    "   predictions = model.predict(example_values)\n",
+    "   print(f'Predictions for examples: {predictions}')\n",
+    "   ```\n",
+    "   Model digunakan untuk membuat prediksi pada beberapa nilai contoh (2.5, 7.5, 12.5), dan hasil prediksi dicetak.\n",
+    "\n",
+    "Kode ini menyajikan penggunaan dasar dari model Decision Tree Regressor untuk menangani masalah regresi numerik.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -172,6 +236,75 @@
    "metadata": {},
    "source": [
     "MODEL K-NEAREST NEIGHBOR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode tersebut merupakan contoh implementasi regresi menggunakan algoritma K-Nearest Neighbors (KNN) dengan menggunakan library scikit-learn (sklearn) di Python. Berikut penjelasan langkah-langkahnya:\n",
+    "\n",
+    "1. **Import Library:**\n",
+    "   ```python\n",
+    "   from sklearn.model_selection import train_test_split\n",
+    "   from sklearn.neighbors import KNeighborsRegressor\n",
+    "   import numpy as np\n",
+    "   ```\n",
+    "   Mengimpor library yang diperlukan, seperti train_test_split untuk membagi dataset menjadi data latih dan data uji, KNeighborsRegressor untuk model regresi berbasis KNN, dan NumPy untuk operasi numerik.\n",
+    "\n",
+    "2. **Dataset:**\n",
+    "   ```python\n",
+    "   data = [\n",
+    "       (0, 0),\n",
+    "       (1, 0.02),\n",
+    "       # ... (data points)\n",
+    "       (50, 1)\n",
+    "   ]\n",
+    "   ```\n",
+    "   Menyediakan dataset berupa pasangan nilai X dan nilai Y yang merepresentasikan hubungan antara dua variabel.\n",
+    "\n",
+    "3. **Pisahkan Data:**\n",
+    "   ```python\n",
+    "   X, y = zip(*data)\n",
+    "   X = np.array(X).reshape(-1, 1)\n",
+    "   y = np.array(y)\n",
+    "   ```\n",
+    "   Memisahkan data menjadi fitur (X) dan target (y) serta mengubah format data fitur agar dapat diterima oleh model.\n",
+    "\n",
+    "4. **Bagi Data:**\n",
+    "   ```python\n",
+    "   X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "   ```\n",
+    "   Membagi dataset menjadi data latih (80%) dan data uji (20%) menggunakan `train_test_split`. `random_state` digunakan untuk memastikan hasil yang konsisten pada setiap eksekusi.\n",
+    "\n",
+    "5. **Inisialisasi Model:**\n",
+    "   ```python\n",
+    "   model = KNeighborsRegressor()\n",
+    "   ```\n",
+    "   Membuat objek model KNeighborsRegressor.\n",
+    "\n",
+    "6. **Latih Model:**\n",
+    "   ```python\n",
+    "   model.fit(X_train, y_train)\n",
+    "   ```\n",
+    "   Melatih model menggunakan data latih.\n",
+    "\n",
+    "7. **Evaluasi Model:**\n",
+    "   ```python\n",
+    "   score = model.score(X_test, y_test)\n",
+    "   print(f'Model Score: {score}')\n",
+    "   ```\n",
+    "   Mengukur kinerja model pada data uji dan mencetak skor.\n",
+    "\n",
+    "8. **Prediksi Nilai:**\n",
+    "   ```python\n",
+    "   example_values = np.array([2.5, 7.5, 12.5]).reshape(-1, 1)\n",
+    "   predictions = model.predict(example_values)\n",
+    "   print(f'Predictions for examples: {predictions}')\n",
+    "   ```\n",
+    "   Melakukan prediksi nilai untuk beberapa contoh nilai yang diberikan dan mencetak hasil prediksinya.\n",
+    "\n",
+    "Dengan demikian, kode tersebut menunjukkan cara menggunakan model KNN untuk memprediksi nilai berdasarkan dataset yang diberikan.\n"
    ]
   },
   {
